deploy/deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: lauriku-app
spec:
  template:
    metadata:
      labels:
        app: lauriku-app
    spec:
      containers:
        - name: lauriku-app
          image: lauriku/k8s-workshop:latest
          ports:
            - containerPort: 3000
