deploy/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: lauriku-svc
  labels:
    app: lauriku-app
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: lauriku-app
